<resources>
    <string name="app_name">Projet_NF28</string>
    <string name="ADAN_explique">Agent des artistes numérique</string>
    <string name="CommenceChoix">CommenceChoix</string>
    <string name="ADAN">ADAN</string>
    <string name="Connexion_Inscription">Connexion / Inscription</string>
    <string name="ChoixRole">Choix Role</string>
    <string name="ExpliqueChangeRole">Pouvoir changer ou ajouter l\'autre role apres</string>
    <string name="Commence">Commence</string>
    <string name="Connexion">Connexion</string>
    <string name="NumOuEmail">Numéro Adan / email :</string>
    <string name="EntrezMot">Entrez ...</string>
    <string name="Mdp">Mot de passe :</string>
    <string name="InscriptionArtiste">Inscription Artiste</string>
    <string name="InscriptionEmployer">Inscription Employer</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prenom</string>
    <string name="AdresseEmail">Email</string>
    <string name="Profession">Profession</string>
    <string name="Niveau">Niveau</string>
    <string name="CV">CV</string>
    <string name="LesOeuvre">Oeuvre</string>
    <string name="RedigerContrat">Rediger Contrat</string>
    <string name="Debutant">Debutant</string>
    <string name="Amateur">Amateur</string>
    <string name="Professionnelle">Professionnelle</string>
    <string name="Type">Type</string>
    <string name="Entreprise">Entreprise</string>
    <string name="OrganisateursDeSpectacles">Organisateurs de spectacles</string>
    <string name="Collectivites">Collectivites</string>
    <string name="Particuliers">Particuliers</string>
    <string name="Certificat">Certificat</string>
    <string name="OK">OK</string>
    <string name="Retour">Retour</string>
    <string name="Connect">Connect</string>
    <string name="Annonce">Annonce</string>
    <string name="EspacePerso">Espace Personnelle</string>
    <string name="DesArtistes">Des Artistes</string>
    <string name="DesOffres">Des Offres</string>
    <string name="InfoArtiste">Info Artiste</string>
    <string name="InfoOffre">Info Offre</string>
    <string name="Contact">Contact</string>
    <string name="Plus">Plus</string>
    <string name="Email">Email</string>
    <string name="Portable">Portable</string>
    <string name="MessagerieADAN">Messagerie ADAN (rien)</string>
    <string name="TitreOffre">Titre Offre</string>
    <string name="Adresse">Adresse</string>
    <string name="Sujet">Sujet</string>
    <string name="Description">Description</string>
    <string name="SalairePossible">D\'Argent Possible(euro)</string>
    <string name="Duree">Duree</string>
    <string name="NbCandidate">Nombre Candidate</string>
    <string name="Offre">Offre</string>
    <string name="Postuler">Postuler</string>
    <string name="Annuler">Annuler</string>
    <string name="EspacePersonelle">Espace Personnelle</string>
    <string name="InfoPersonnelle">Info Personnelle</string>
    <string name="MesOffres">Mes Offres</string>
    <string name="AjouterRole">Atoujer Role</string>
    <string name="Artiste">Artiste</string>
    <string name="Employeur">Employeur</string>
    <string name="Emploi">Emploi</string>
    <string name="Prestation">Prestation</string>
    <string name="ChoixCandiate">Choix Candiate</string>
    <string name="ListCandidate">List Candidate</string>
    <string name="Recurrence">Recurrence</string>

</resources>